--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -35,9 +35,9 @@
                     <span></span>
                     <span></span>
                     <div class="content">
-                        <h3 class="card-heading">Our mission</h3>
+                        <h3 class="card-heading">OUR VISION</h3>
                     <p class="card-text">
-                        At Codesdesk Technology, we believe in the power of effective web design and development to transform your online business. Our mission is to provide you with the tools and expertise needed to succeed in the ever-growing ecommerce industry.
+                        At Codesdesk Technology, we are driven by a strong vision - to empower businesses with stunning and high-performing online stores that captivate customers and drive sales.
                     </p>
                     </div>
                 </div>
@@ -49,9 +49,9 @@
                     <span></span>
                     <span></span>
                     <div class="content">
-                        <h3 class="card-heading">Our mission</h3>
+                        <h3 class="card-heading">OUR PROCESS</h3>
                     <p class="card-text">
-                        At Codesdesk Technology, we believe in the power of effective web design and development to transform your online business. Our mission is to provide you with the tools and expertise needed to succeed in the ever-growing ecommerce industry.
+                        At Codesdesk Technology, we understand that a visually appealing and user-friendly website is crucial for your online business success. Our team of experienced designers and developers are dedicated to helping you achieve your goals.
                     </p>
                     </div>
                 </div>
