--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -7,7 +7,7 @@
                 </div>
                 <div class="newsletter_input_wrap">
                     <form action="" class="flex">
-                        <input type="email" name="" id="" placeholder="Enter your email">
+                        <input type="email" name="" id="" placeholder="Enter your email" required>
                         <button class="cdk-btn-green">Subcribe Now</button>
                     </form>
                 </div>
