--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -39,19 +39,16 @@
                                             <a routerLink="/shopify-web">shopify Web Development</a>
                                         </li>
                                         <li class="drop-list">
-                                            <a routerLink="/strategy&cro" >Strategy & CRO Insights</a>
+                                            <a routerLink="/strategy&cro">Strategy & CRO Insights</a>
                                         </li>
                                         <li class="drop-list">
-                                            <a href="/">Replatforming</a>
+                                            <a routerLink="/internationalization">Internationalization</a>
                                         </li>
                                         <li class="drop-list">
                                             <a routerLink="/data-migration">Data Migration</a>
                                         </li>
                                         <li class="drop-list">
-                                            <a href="/">Performance Enhancement</a>
-                                        </li>
-                                        <li class="drop-list">
-                                            <a href="/">theme development</a>
+                                            <a routerLink="/headless">Headless & Composable Commerce</a>
                                         </li>
                                         <li class="drop-list">
                                             <a routerLink="/shopify-app">Custom Shopify App Development</a>
