--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -218,7 +218,7 @@
                             <p class="card-txt">Shopify Plus Design & Build</p>
                             </div>
                         </div>
-                        <img class="desktop" src="../../assets/image/portfolio/our_work_1.webp" alt="">
+                        <img class="desktop" src="../../assets/image/portfolio/our_work_11.webp" alt="">
                         <img class="mobile" src="../../assets/image/portfolio/our_work_1-mobile.webp" alt="">
                     </a>
                     <div class="our_card_bottom_text mobile">
@@ -280,7 +280,7 @@
     </div>
 </section>
 <section class="partnerships_section">
-    <div class="container">
+    <div class="partnerships_container">
         <div class="partnerships_all_wrap flex_two">
             <div class="partner_title">
                 <h3 class="part_title">Partnerships</h3>
