--- a/src/app/resource-6/resource-6.component.html
+++ b/src/app/resource-6/resource-6.component.html
@@ -117,7 +117,7 @@
                     </li>
                 </ul>
                 <h2>
-                    In summary, Language Translator apps like <a href="https://apps.shopify.com/?show_store_picker=1">LangShop</a> are essential for businesses aiming to expand their reach globally, offering a personalized and accessible experience for users in different linguistic and cultural contexts. The key features mentioned above contribute to creating a seamless and effective multilingual online presence.
+                    In summary, Language Translator apps like <a target="_blank" href="https://apps.shopify.com/?show_store_picker=1">LangShop</a> are essential for businesses aiming to expand their reach globally, offering a personalized and accessible experience for users in different linguistic and cultural contexts. The key features mentioned above contribute to creating a seamless and effective multilingual online presence.
                 </h2>
             </div>
             <div class="blog-newslwtter-wrap">
