--- a/src/app/error/error.component.css
+++ b/src/app/error/error.component.css
@@ -1,6 +1,5 @@
 .error-main-section {
-    padding: 239.8px 0;
-    background: linear-gradient(245deg, rgba(12, 55, 48, 0.50) 0%, #010C16 100%);
+    padding: 239.8px 0 150px;
 }
 .container {
     padding: 0 30px;
