--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -15,11 +15,11 @@
                         <div class="count color-yellow"><span class="counter-number" data-count="10">0</span> +</div>
                         <h2 class="text">Years of Experince</h2>
                     </div>
-                    <div class="first_count_wrap counter">
+                    <div class="first_count_wrap counter two">
                         <div class="count color-yellow"><span class="counter-number" data-count="120">0</span> +</div>
                         <h2 class="text">Complete Project</h2>
                     </div>
-                    <div class="first_count_wrap counter">
+                    <div class="first_count_wrap counter three">
                         <div class="count color-yellow"><span class="counter-number" data-count="10">0</span> +</div>
                         <h2 class="text">Team Members</h2>
                     </div>
@@ -187,7 +187,8 @@
                     </div>
                 </div>
                 <div class="bnt-wrap">
-                    <a class="cdk-btn-green" routerLinkActive="active" routerLink="/service">View all services</a>
+                    <a class="cdk-btn-green desktop" routerLinkActive="active" routerLink="/service">View all services</a>
+                    <a class="cdk-btn-green mobile" routerLinkActive="active" routerLink="/service">View all</a>
                 </div>
             </div>
         </div>
@@ -274,6 +275,10 @@
                         <h4 class="card-heading">Igluu Meal Prep</h4>
                         <p class="card-txt">Shopify Plus Design & Build</p>
                     </div>
+                </div>
+                <div class="bnt-wrap">
+                    <a class="cdk-btn-green desktop" routerLinkActive="active" routerLink="/service">View all projects</a>
+                    <a class="cdk-btn-green mobile" routerLinkActive="active" routerLink="/service">View all</a>
                 </div>
             </div>
         </div>
