--- a/src/app/blog-list/blog-list.component.css
+++ b/src/app/blog-list/blog-list.component.css
@@ -2,10 +2,13 @@
     padding: 189.8px 0 200px;
 }
 .blogs-section .our_work_all_wrap .blog_cards_wrapper {
-   row-gap: 50px;
+   row-gap: 0px;
 }
 @media only screen and (max-width:767px) {
     .blogs-section {
-        padding: 70px 0 40px;
+        padding: 70px 0 70px;
+    }
+    .blogs-section .our_work_all_wrap .blog_cards_wrapper {
+        row-gap: 30px;
     }
 }
