--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,4 +1,5 @@
 .footer_main_wrap {
+    border-top: 1px solid #343A40;
     background: linear-gradient(100deg, rgba(12, 55, 48, 0.50) 0%, #000 99.17%);
 }
 .footer-all-wrapper {
