--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -18,7 +18,7 @@
 }
 .text_wrap .main-text-wrap {
     width: 100%;
-    padding: 9px 0 9px 62px;
+    padding: 9px 0 10px 62px;
     border-left: 1px solid #444E59;
 }
 .text_wrap .main-text-wrap .text-title {
@@ -33,7 +33,7 @@
 .text_wrap .detail_count_wrap {
     width: 100%;
     padding-left: 62px;
-    margin-top: 35px;
+    margin-top: 25px;
 }
 .text_wrap .detail_count_wrap .first_count_wrap:not(:last-child) {
     margin-right: 72px;
@@ -42,6 +42,12 @@
     width: 100%;
     max-width: 84px;
     text-align: center;
+}
+.text_wrap .detail_count_wrap .first_count_wrap.two {
+    max-width: 81px;
+}
+.text_wrap .detail_count_wrap .first_count_wrap.three {
+    max-width: 78px;
 }
 .text_wrap .detail_count_wrap .first_count_wrap .count {
     text-align: center;
@@ -174,6 +180,9 @@
 .our_work_section {
     margin: 100px 0;
 }
+.our_work_section .our_work_all_wrap .service-head .service-titel h2 {
+    font-size: 40px;
+}
 
 
 @media only screen and (max-width:1280px) {
@@ -246,6 +255,10 @@
         text-align: center;
         padding: 0 20px;
     }
+    .text_wrap .detail_count_wrap .first_count_wrap .count {
+        font-size: 25px;
+        margin-bottom: 8px;
+    }
     .text_wrap .main-text-wrap {
         width: 100%;
         padding: 0;
@@ -257,8 +270,18 @@
     .text_wrap .detail_count_wrap {
         width: 100%;
         padding-left: 0;
+        padding: 0 10px;
         margin-top: 35px;
         justify-content: space-between;
+    }
+    .text_wrap .detail_count_wrap .first_count_wrap {
+        max-width: 75px;
+    }
+    .text_wrap .detail_count_wrap .first_count_wrap.two {
+        max-width: 72px;
+    }
+    .text_wrap .detail_count_wrap .first_count_wrap.three {
+        max-width: 69px;
     }
     .text_wrap .detail_count_wrap .first_count_wrap:not(:last-child) {
         margin-right: 0;
@@ -280,6 +303,10 @@
     }
     .detail_count_wrap .first_count_wrap .text {
         font-size: 16px;
+        line-height: 25px;
+    }
+    .slideshow {
+        margin-top: 41px;
     }
     .slideshow .slider .item img {
         min-width: 335px;
@@ -290,15 +317,28 @@
         padding: 0 20px;
     }
     .loop_slider_wrap {
-        margin-top: -69px;
-        padding: 119px 0 50px;
+        margin-top: -64px;
+        padding: 114px 0 50px;
     }
     .loop_slider_wrap .loop_slider div {
         margin-right: 71px;
     }
+    .our_work_section .our_work_all_wrap .our_work_body_wrap .bnt-wrap .cdk-btn-green.mobile,
+    .service_body_wrap .bnt-wrap .cdk-btn-green.mobile {
+        display: flex;
+        max-width: 120px;
+        height: 45px;
+    }
+    .our_work_section {
+        margin: 0px 0;
+    }
+    .our_work_body_wrap {
+        margin-top: 0px;
+    }
     .partnerships_section {
         width: 100%;
         padding: 40px 20px 40px;
+        margin-top: 20px;
     }
     .partnerships_container {
         padding: 0;
