--- a/src/app/our-team/our-team.component.css
+++ b/src/app/our-team/our-team.component.css
@@ -239,7 +239,7 @@
     height: 100%;
     border: 1px solid #37C8AE;
     border-radius: 10px;
-    padding: 27px 21px;
+    padding: 26px 21px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -456,6 +456,18 @@
     .professional-team-section .professional-team-wrap {
         row-gap: 30px;
     }
+    .professional-team-section .professional-team-wrap .professional-team-cards .professional-cards .our-card-wrap {
+        max-width: 220px;
+        padding: 26px 21px 32px 22px;
+    }
+    .professional-team-section .professional-team-wrap .professional-team-cards .professional-cards .our-card-wrap .our-text {
+        font-size: 16px;
+        line-height: 25px;
+    }
+    .professional-team-section .professional-team-wrap .professional-team-cards .professional-cards .our-card-wrap .our-card-heading {
+        font-size: 18px;
+        margin: 15px 0;
+    }
     .professional-team-section .professional-team-wrap .professional-team-cards .professional-cards {
         flex-direction: column;
         align-items: center;
@@ -481,5 +493,14 @@
         margin: 0 auto;
         height: 450px;
         perspective: 500px;
+    }
+    .blogs-section .our_work_all_wrap .all-team-cards-wrapper {
+        row-gap: 20px;
+    }
+    .professional-team-section .professional-team-wrap .professional-team-text .main-heading {
+        font-size: 28px;
+    }
+    .professional-team-section .professional-team-wrap .professional-team-text .primery-text {
+        margin-bottom: 30px;
     }
 }
