--- a/src/app/our-work/our-work.component.css
+++ b/src/app/our-work/our-work.component.css
@@ -8,7 +8,7 @@
     margin-top: 50px;
 }
 .our_work_section {
-    margin-bottom: 100px;
+    margin-bottom: 200px;
     margin-top: 100px;
 }
 .bnt-wrap.desktop {
@@ -25,5 +25,8 @@
         padding: 70px 0px 50px;
         margin-bottom: 0px;
         margin-top: 0 !important;
+    }
+    .our_work_body_wrap {
+        margin-top: 0px;
     }
 }
