--- a/src/styles.css
+++ b/src/styles.css
@@ -275,6 +275,7 @@ body {
     align-items: center;
     justify-content: center;
     border-radius: 4px;
+    background-size: 300% 100%;
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
@@ -282,11 +283,83 @@ body {
     text-transform: capitalize;
     font-family: var(--second-heading);
     cursor: pointer;
-    transition: all 0.3s ease;
+    transition: all 0.90s;
+    position: relative;
+    overflow: hidden;
+    /* -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .5s ease-in-out; 
+    background-image: linear-gradient(to right, #37C8AE, #9690903b, #ccccccab, #37C8AE);
+    box-shadow: 0 4px 15px 0 rgba(45, 54, 65, 0.75); */
 }
-.cdk-btn-green:hover {
+/* .cdk-btn-green:hover {
     box-shadow: 0px 0px 10px 4px #37C8AE;
+} */
+/* .cdk-btn-green:hover {
+    background-position: 100% 0;
+    -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .5s ease-in-out;
+} */
+.cdk-btn-white::after,
+.cdk-btn-white::before,
+.cdk-btn-green::before,
+.cdk-btn-green::after {
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translateX(-100px) skewX(-15deg);
+    content: "";
 }
+@keyframes hovering {
+    0% {
+        transform: translateX(-100px) skewX(-15deg); 
+    }
+    100%{
+        transform: translateX(300px) skewX(-15deg);
+    }
+    0% {
+        transform: translateX(-100px) skewX(-15deg); 
+    }
+}
+.cdk-btn-white::before {
+    width: 60px;
+    background: #0414121c;
+    filter: blur(30px);
+    opacity: 0.5;
+}
+.cdk-btn-green::before {
+    width: 60px;
+    background: rgba(255, 255, 255, 0.5);
+    filter: blur(30px);
+    opacity: 0.5;
+}
+.cdk-btn-white::after {
+    width: 40px;
+    left: 40px;
+    background: #0414121c;
+    filter: blur(5px);
+}
+.cdk-btn-green::after {
+    width: 40px;
+    left: 40px;
+    background: rgba(255, 255, 255, 0.2);
+    filter: blur(5px);
+}
+.cdk-btn-white:hover::before,
+.cdk-btn-green:hover::before {
+    opacity: 1;
+}
+.cdk-btn-white:hover::before,
+.cdk-btn-white:hover::after,
+.cdk-btn-green:hover::before,
+.cdk-btn-green:hover::after {
+    transform: translateX(300px) skewX(-15deg);
+    transition: all 0.90s ease;
+    animation: hovering 0.9s linear infinite;
+}
+
 .cdk-btn-white {
     width: 160px;
     height: 50px;
@@ -303,12 +376,13 @@ body {
     line-height: 19px;
     text-transform: capitalize;
     font-family: var(--second-heading);
-    cursor: pointer;
-    transition: all 0.3s ease;
+    transition: all 0.90s;
+    position: relative;
+    overflow: hidden;
 }
-.cdk-btn-white:hover {
+/* .cdk-btn-white:hover {
     box-shadow: 0px 0px 10px 4px #ffffff;
-}
+} */
 .cdk-btn-transparent {
     width: 160px;
     height: 50px;
@@ -1196,6 +1270,12 @@ body {
     .service_section {
         padding: 55px 0px;
     }
+    .service_section .service_all_wrap .green-text, 
+    .our_work_section .our_work_all_wrap .green-text, 
+    .blogs-section .our_work_all_wrap .green-text, 
+    .our-approach-section .green-text {
+        margin-bottom: 10px;
+    }
     .service_section .service_all_wrap,
     .our_work_section .our_work_all_wrap,
     .blogs-section .our_work_all_wrap {
@@ -1331,7 +1411,7 @@ body {
         margin-top: 15px;
     }
     .blogs-section {
-        padding: 30px 0 40px;
+        padding: 30px 0 70px;
     }
     .blogs-section .our_work_all_wrap {
         padding: 0 20px 0 20px;
@@ -1493,7 +1573,7 @@ html {
     padding: 0 30px;
 }
 #blog-detail-first.blog-detail-section {
-    margin: 100px 0 140px;
+    margin: 100px 0 71px;
 }
 #blog-detail-first.blog-detail-section .blog-header {
     margin-bottom: 20px;
@@ -1577,6 +1657,7 @@ html {
     border-radius: 10px;
     position: sticky;
     top: 100px;
+    margin-right: 12px;
 }
 #blog-detail-first.blog-detail-section .blog-body-and-newsletter .rte-blog-body h5 {
     list-style-type: auto;
@@ -1761,6 +1842,9 @@ html {
 }
 #blog-detail-first .link-wrap .share-link-hidden .share-to-list a span:hover {
     color: #37C8AE;
+}
+#blogs-last-section.blogs-section {
+    padding: 129px 0 220px;
 }
 
 @media only screen and (min-width:992px) and (max-width:1024px) {
@@ -1988,6 +2072,7 @@ html {
 #service-five.service-inner-slider {
     width: 100%;
     padding: 114px 0;
+    margin-bottom: 150px;
     background-position: center;
     background-size: cover !important;
     background-repeat: no-repeat !important;
@@ -2186,7 +2271,19 @@ html {
         padding: 0 20px;
     }
     #service-main.main-title-section {
-        padding: 70px 0px !important;
+        padding: 70px 0px 60px!important;
+    }
+    #service-main.main-title-section .main-title-wrap .cdk-buttons-wrap {
+        margin-top: 20px;
+    }
+    #service-main.main-title-section .main-title-wrap .cdk-buttons-wrap .cdk-btn-green {
+        margin-right: 15px;
+        max-width: 120px;
+        height: 45px;
+    }
+    #service-main.main-title-section .main-title-wrap .cdk-buttons-wrap  .cdk-btn-white {
+        max-width: 120px;
+        height: 45px;
     }
     #service-two .container-two {
         max-width: 100%;
@@ -2199,7 +2296,7 @@ html {
         padding: 20px 0 30px 20px;
     }
     #service-two .container-two .all-items-wrapper .unorder-list {
-        row-gap: 12px;
+        row-gap: 10px;
         padding: 20px 0 0 20px;
     }
     #service-two.service_section {
@@ -2211,11 +2308,12 @@ html {
         width: 100%;
     }
     #service-four.our-approach-section {
-        margin: 55px 0 100px;
+        margin: 55px 0 108px;
     }
     /* slider */
     #service-five.service-inner-slider {
-        padding: 65px 0 100px;
+        padding: 60px 0;
+        margin-bottom: 96px;
     }
     #service-five.service-inner-slider .all-text-slide-wrap {
         row-gap: 40px;
@@ -2240,10 +2338,32 @@ html {
     #service-five.service-inner-slider .all-text-slide-wrap .slider-right-text .slide-text-r:not(:last-child) {
         margin-bottom: 30px;
     }
+    #service-five.service-inner-slider .all-text-slide-wrap .slider-left-text .slide-text, 
+    #service-five.service-inner-slider .all-text-slide-wrap .slider-right-text .slide-text-r {
+        column-gap: 20px;
+    }
+    #service-five.service-inner-slider .all-text-slide-wrap .slider-left-text .slide-text .side-txt, 
+    #service-five.service-inner-slider .all-text-slide-wrap .slider-right-text .slide-text-r .side-txt {
+        font-size: 18px;
+        line-height: 25px;
+    }
     #service-five.service-inner-slider .service-slider-head .slider-heading {
         font-size: 28px;
         line-height: 34px;
         margin-bottom: 30px;
+    }
+    #service-four.our-approach-section .container .about_cards_wrap {
+        padding: 30px 0 0;
+        column-gap: 20px;
+    }
+    #service-four.our-approach-section .container .about_cards_wrap .about-cards_wrap .box .content {
+        padding: 40px 20px;
+    }
+    #service-four.our-approach-section .container .about_cards_wrap .about-cards_wrap .card-wrapper .card-heading {
+        margin-bottom: 24px;
+    }
+    #service-four.our-approach-section .container .about_cards_wrap .about-cards_wrap .box {
+        min-height: 276px;
     }
 }
 /* portfolio inner pages */
@@ -2421,6 +2541,7 @@ html {
 #desktop-image .desktop-image-wrapper,
 #desktop-image .desktop-image-wrapper .desktop-img {
     border-radius: 10px;
+    display: block;
 }
 #service-two.portfolio-list-section {
     padding: 0;
