--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -277,8 +277,8 @@
                     </div>
                 </div>
                 <div class="bnt-wrap">
-                    <a class="cdk-btn-green desktop" routerLinkActive="active" routerLink="/service">View all projects</a>
-                    <a class="cdk-btn-green mobile" routerLinkActive="active" routerLink="/service">View all</a>
+                    <a class="cdk-btn-green desktop" routerLinkActive="active" routerLink="/our-work">View all projects</a>
+                    <a class="cdk-btn-green mobile" routerLinkActive="active" routerLink="/our-work">View all</a>
                 </div>
             </div>
         </div>
