--- a/src/app/menshealthclinic/menshealthclinic.component.html
+++ b/src/app/menshealthclinic/menshealthclinic.component.html
@@ -26,10 +26,10 @@
             </div>
             <div class="service-text">
                 <p class="primery-text">
-                    This journey inspired me to create Lux & Nyx, a brand that stands for something bigger than just a handbag. Our handbags are not just accessories; they are symbols of empowerment, designed to inspire confidence and ambition in women who are carving out their own paths in life.And now, with the addition of our unisex line, we proudly support everyone who believes in the movement of gender equity.
+                    This journey inspired me to create Menshealthclinic, a brand that stands for something bigger than just a handbag. Our handbags are not just accessories; they are symbols of empowerment, designed to inspire confidence and ambition in women who are carving out their own paths in life.And now, with the addition of our unisex line, we proudly support everyone who believes in the movement of gender equity.
                 </p>
                 <div class="bnt-wrap">
-                    <a class="cdk-btn-green" href="https://menshealthclinic.com/au/">view live site</a>
+                    <a class="cdk-btn-green" target="_blank" href="https://menshealthclinic.com/au/">view live site</a>
                 </div>
             </div>
         </div>
