--- a/src/styles.css
+++ b/src/styles.css
@@ -2110,7 +2110,7 @@ html {
     font-style: normal;
     font-weight: 400;
     line-height: 27px;
-    /* list-style-image: url(../src/assets/image/servicre-inner/Layer.svg); */
+    list-style-image: url(../src/assets/image/servicre-inner/Layer.svg);
 }
 /* last */
 #service-four.our-approach-section {
