blog images update

--- a/src/app/blog-list/blog-list.component.html
+++ b/src/app/blog-list/blog-list.component.html
@@ -94,22 +94,22 @@
                         <p>use & benifit Abra Auto Applied Discounts</p>
                     </div>
                 </a>
-                <a routerLink="/resource" class="blog_card_wrap">
+                <a routerLink="/resource-10" class="blog_card_wrap">
                     <div class="blog-img">
-                        <img src="../../assets/image/blogs/blog-one.webp" alt="blog">
+                        <img src="../../assets/image/blogs/blog-ten.webp" alt="blog">
                     </div>
                     <div class="blog-title-text">
-                        <h3>January 02, 2024</h3>
-                        <p>5 Tips for Optimizing Your Shopify Store's SEO</p>
+                        <h3>May 29, 2024</h3>
+                        <p>EG Auto Add to Cart Free Gift</p>
                     </div>
                 </a>
-                <a routerLink="/resource-3" class="blog_card_wrap">
+                <a routerLink="/resource-11" class="blog_card_wrap">
                     <div class="blog-img">
-                        <img src="../../assets/image/blogs/blog-two.webp" alt="blog">
+                        <img src="../../assets/image/blogs/blog-eleven.webp" alt="blog">
                     </div>
                     <div class="blog-title-text">
-                        <h3>January 21, 2024</h3>
-                        <p>How to Use Instagram to Drive Sales on Your Shopify Store</p>
+                        <h3>june 09, 2024</h3>
+                        <p>Section Store</p>
                     </div>
                 </a>
                 <a routerLink="/resource-2" class="blog_card_wrap">
