Blog inner pages image update

--- a/src/app/blog-list/blog-list.component.html
+++ b/src/app/blog-list/blog-list.component.html
@@ -112,36 +112,36 @@
                         <p>Section Store</p>
                     </div>
                 </a>
-                <a routerLink="/resource-2" class="blog_card_wrap">
+                <a routerLink="/resource-12" class="blog_card_wrap">
                     <div class="blog-img">
-                        <img src="../../assets/image/blogs/blog-three.webp" alt="blog">
+                        <img src="../../assets/image/blogs/blog-twelve.webp" alt="blog">
                     </div>
                     <div class="blog-title-text">
-                        <h3>February 06, 2024</h3>
-                        <p>5 Best Shopify Apps for Streamlining Your Business Operations</p>
+                        <h3>June 23, 2024</h3>
+                        <p>Shipping Rates - Shipeasy</p>
                     </div>
                 </a>
-                <a routerLink="/resource-4" class="blog_card_wrap">
+                <a routerLink="/resource-13" class="blog_card_wrap">
                     <div class="blog-img">
-                        <img src="../../assets/image/blogs/blog-four.webp" alt="blog">
+                        <img src="../../assets/image/blogs/blog-thirteen.webp" alt="blog">
                     </div>
                     <div class="blog-title-text">
-                        <h3>February 27, 2024</h3>
-                        <p>The Benefits of Integrating Email Marketing into Your Shopify Store</p>
+                        <h3>July 13, 2024</h3>
+                        <p>Essential Countdown Timer Bar</p>
                     </div>
                 </a>
-                <a routerLink="/resource-5" class="blog_card_wrap">
+                <a routerLink="/resource-14" class="blog_card_wrap">
                     <div class="blog-img">
-                        <img src="../../assets/image/blogs/blog-five.webp" alt="blog">
+                        <img src="../../assets/image/blogs/blog-fourteen.webp" alt="blog">
                     </div>
                     <div class="blog-title-text">
-                        <h3>March 11, 2024</h3>
-                        <p>How to Build a Winning Shopify Store Design</p>
+                        <h3>July 30, 2024</h3>
+                        <p>Pixelio Multi Facebook Pixels</p>
                     </div>
                 </a>
-                <div class="cdk-button-wrap margin-auto"  id="loadMore">
-                    <a class="cdk-btn-green" href="javascript:void(0)">Load more</a>
-                </div>
+            </div>
+            <div class="cdk-button-wrap margin-auto"  id="loadMore">
+                <a class="cdk-btn-green" href="javascript:void(0)">Load more</a>
             </div>
         </div>
     </div>
