--- a/src/app/resource-13/resource-13.component.html
+++ b/src/app/resource-13/resource-13.component.html
@@ -2,11 +2,11 @@
     <div id="container" class="container">
         <div class="blog-header">
             <h1 class="main-heading">
-                Essential Countdown Timer Bar:
+                Essential Countdown Timer Bar
             </h1>
             <div class="date-and-link-wrap flex-end">
                 <div class="date-wrap">
-                    <h3 class="green-text">January 20, 2021</h3>
+                    <h3 class="green-text">July 13, 2024</h3>
                 </div>
                 <div class="link-wrap">
                     <a class="cdk-btn-white"><span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -26,8 +26,8 @@
             </div>
         </div>
         <div class="blog-image-inner-wrap">
-            <img class="desktop" src="../../assets/image/blogs/blog-nine-banner.webp" width="100%" alt="blog-inner">
-            <img class="mobile" src="../../assets/image/blogs/blog-nine-banner-mobile.webp" width="100%" alt="blog-inner">
+            <img class="desktop" src="../../assets/image/blogs/blog-thirteen-banner.webp" width="100%" alt="blog-inner">
+            <img class="mobile" src="../../assets/image/blogs/blog-thirteen-banner-mobile.webp" width="100%" alt="blog-inner">
         </div>
         <div class="blog-body-and-newsletter flex_two">
             <div class="rte-blog-body">
